--- a/templates/blog.html
+++ b/templates/blog.html
@@ -175,7 +175,7 @@
                 <img src="{{ url_for('static', filename='images/kara-curuk.jpg') }}" alt="Kara Çürüklük">
                 
                 <div class="blog-info">
-                    <span class="author">Yazar: Ahmet Şaşmaz</span>
+                    <span class="author">Yazar: Ahmet Yılmaz</span>
                     <span class="date">Tarih: 23 Aralık 2022</span>
                 </div>
                 
